--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/blur": "^4.4.1",
     "@react-native/new-app-screen": "0.80.0",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "react": "19.1.0",
     "react-native": "0.80.0",
+    "react-native-otp-textinput": "^1.1.7",
     "react-native-safe-area-context": "^5.5.1",
     "react-native-screens": "^4.11.1"
   },
